versioned_docs/version-4.1.x/reference/functions/Invoke-ADTAllUsersRegistryAction.mdx
---
id: Invoke-ADTAllUsersRegistryAction
title: Invoke-ADTAllUsersRegistryAction
hide_title: false
hide_table_of_contents: false
---

## SYNOPSIS

Set current user registry settings for all current users and any new users in the future.

## SYNTAX

```powershell
Invoke-ADTAllUsersRegistryAction [-ScriptBlock] <ScriptBlock[]> [-UserProfiles <UserProfileInfo[]>]
 [-SkipUnloadedProfiles] [-WhatIf] [-Confirm] [<CommonParameters>]
```

## DESCRIPTION

Set HKCU registry settings for all current and future users by loading their NTUSER.dat registry hive file, and making the modifications.

This function will modify HKCU settings for all users even when executed under the SYSTEM account and can be used as an alternative to using ActiveSetup for registry settings.

To ensure new users in the future get the registry edits, the Default User registry hive used to provision the registry for new users is modified.

The advantage of using this function over ActiveSetup is that a user does not have to log off and log back on before the changes take effect.

## EXAMPLES

### EXAMPLE 1

```powershell
Invoke-ADTAllUsersRegistryAction -ScriptBlock {
    Set-ADTRegistryKey -SID $_.SID -LiteralPath 'HKCU\Software\Microsoft\Office\14.0\Common' -Name 'qmenable' -Value 0 -Type DWord
    Set-ADTRegistryKey -SID $_.SID -LiteralPath 'HKCU\Software\Microsoft\Office\14.0\Common' -Name 'updatereliabilitydata' -Value 1 -Type DWord
}
```


Example demonstrating the setting of two values within each user's HKEY_CURRENT_USER hive.

### EXAMPLE 2

```powershell
Invoke-ADTAllUsersRegistryAction {
    Set-ADTRegistryKey -SID $_.SID -LiteralPath 'HKCU\Software\Microsoft\Office\14.0\Common' -Name 'qmenable' -Value 0 -Type DWord
    Set-ADTRegistryKey -SID $_.SID -LiteralPath 'HKCU\Software\Microsoft\Office\14.0\Common' -Name 'updatereliabilitydata' -Value 1 -Type DWord
}
```


As the previous example, but showing how to use ScriptBlock as a positional parameter with no name specified.

### EXAMPLE 3

```powershell
Invoke-ADTAllUsersRegistryAction -UserProfiles (Get-ADTUserProfiles -ExcludeDefaultUser) -ScriptBlock {
    Set-ADTRegistryKey -SID $_.SID -LiteralPath 'HKCU\Software\Microsoft\Office\14.0\Common' -Name 'qmenable' -Value 0 -Type DWord
    Set-ADTRegistryKey -SID $_.SID -LiteralPath 'HKCU\Software\Microsoft\Office\14.0\Common' -Name 'updatereliabilitydata' -Value 1 -Type DWord
}
```


As the previous example, but sending specific user profiles through to exclude the Default profile.

## PARAMETERS

### -ScriptBlock

Script block which contains HKCU registry actions to be run for all users on the system.

```yaml
Type: ScriptBlock[]
Parameter Sets: (All)
Aliases:

Required: True
Position: 1
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -UserProfiles

Specify the user profiles to modify HKCU registry settings for.
Default is all user profiles except for system profiles.

```yaml
Type: UserProfileInfo[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -SkipUnloadedProfiles

Specifies that unloaded registry hives should be skipped and not be loaded by the function.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -WhatIf

Shows what would happen if the cmdlet runs.
The cmdlet is not run.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Confirm

Prompts you for confirmation before running the cmdlet.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### None

### You cannot pipe objects to this function.
## OUTPUTS

### None

### This function does not generate any output.
## NOTES
An active ADT session is NOT required to use this function.

This function supports the -WhatIf and -Confirm parameters for testing changes before applying them.

Tags: psadt<br />
Website: https://psappdeploytoolkit.com<br />
Copyright: (C) 2026 PSAppDeployToolkit Team (Sean Lillis, Dan Cunningham, Muhammad Mashwani, Mitch Richters, Dan Gough).<br />
License: https://opensource.org/license/lgpl-3-0

## RELATED LINKS

[https://psappdeploytoolkit.com/docs/reference/functions/Invoke-ADTAllUsersRegistryAction](https://psappdeploytoolkit.com/docs/reference/functions/Invoke-ADTAllUsersRegistryAction)
